k8s/overlays/shokohsc/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bubbles
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: ca-cluster-issuer
    bubbles.shokohsc.home/name: dev-bubbles
    bubbles.shokohsc.home/url: https://dev.bubbles.shokohsc.home
    bubbles.shokohsc.home/icon: wrench
spec:
  rules:
  - host: dev.bubbles.shokohsc.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bubbles
            port:
              number: 80
  tls:
  - hosts:
    - dev.bubbles.shokohsc.home
    secretName: bubbles-cert
